now build a WAR file. POM updates finally

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
 	<name>003-getting-started-with-spring-boot</name>
 	<description>Getting started with spring boot</description>
+	
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -19,6 +21,17 @@
 	</parent>
 
 	<dependencies>
+	
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
