--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,11 @@
 	</parent>
 
 	<dependencies>
-	
+		<dependency>
+  			<groupId>org.postgresql</groupId>
+  			<artifactId>postgresql</artifactId>
+  			<version>9.3-1103-jdbc41</version>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
